pkg/specparser/specgrammar_parser.go
// Code generated from SpecGrammar.g4 by ANTLR 4.7.1. DO NOT EDIT.

package specparser // SpecGrammar
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'assert'", "'assume'", "'requires'", "'ensures'", "'invariant'", "'pure'",
	"'old'", "'forall'", "'exists'", "'acc'", "'in'", "'range'", "'shared'",
	"'exclusive'", "'predicate'", "", "", "'('", "')'", "'['", "']'", "'{'",
	"'}'", "'!'", "'&&'", "'||'", "'==>'", "'=='", "'!='", "'<'", "'>'", "'<='",
	"'>='", "'/'", "'%'", "'.'", "':'", "','", "'+'", "'-'", "'*'", "'?'",
	"'&'", "", "'/*@'", "'@*/'", "'//@'",
}
var symbolicNames = []string{
	"", "ASSERT", "ASSUME", "PRE", "POST", "INV", "PURE", "OLD", "FORALL",
	"EXISTS", "ACCESS", "IN", "RANGE", "SHARED", "EXCLUSIVE", "PREDICATE",
	"IDENTIFIER", "INTEGER", "LPAREN", "RPAREN", "LSB", "RSB", "LCB", "RCB",
	"NOT", "AND", "OR", "IMPLIES", "EQ", "NEQ", "LESS", "GREAT", "LEQ", "GEQ",
	"DIV", "MOD", "DOT", "COLON", "COMMA", "PLUS", "MINUS", "STAR", "QUESTION",
	"REFERENCE", "WHITESPACE", "SPECSTART", "SPECEND", "SPECLINESTART",
}

var ruleNames = []string{
	"start", "specification", "specStatement", "assertion", "expression", "primary",
	"unary", "binary", "operand", "literal", "integer", "identifier", "squarebracket",
	"dotnotation", "arrayLit", "structLit", "literalValue", "elementList",
	"keyedElement", "key", "element", "arrayType", "arrayLength", "elementType",
	"typeLit", "pointerType", "purity", "sharedVarsNotation", "exclusiveVarsNotation",
	"old", "label", "variableList", "expressionList", "identifierList", "varTypeTuple",
	"accessPermission", "reference", "domain", "domainLiteral", "numericDomainLiteral",
	"dataStructureDomainLiteral", "dataStructureRange", "predicate",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SpecGrammarParser struct {
	*antlr.BaseParser
}

func NewSpecGrammarParser(input antlr.TokenStream) *SpecGrammarParser {
	this := new(SpecGrammarParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SpecGrammar.g4"

	return this
}

// SpecGrammarParser tokens.
const (
	SpecGrammarParserEOF           = antlr.TokenEOF
	SpecGrammarParserASSERT        = 1
	SpecGrammarParserASSUME        = 2
	SpecGrammarParserPRE           = 3
	SpecGrammarParserPOST          = 4
	SpecGrammarParserINV           = 5
	SpecGrammarParserPURE          = 6
	SpecGrammarParserOLD           = 7
	SpecGrammarParserFORALL        = 8
	SpecGrammarParserEXISTS        = 9
	SpecGrammarParserACCESS        = 10
	SpecGrammarParserIN            = 11
	SpecGrammarParserRANGE         = 12
	SpecGrammarParserSHARED        = 13
	SpecGrammarParserEXCLUSIVE     = 14
	SpecGrammarParserPREDICATE     = 15
	SpecGrammarParserIDENTIFIER    = 16
	SpecGrammarParserINTEGER       = 17
	SpecGrammarParserLPAREN        = 18
	SpecGrammarParserRPAREN        = 19
	SpecGrammarParserLSB           = 20
	SpecGrammarParserRSB           = 21
	SpecGrammarParserLCB           = 22
	SpecGrammarParserRCB           = 23
	SpecGrammarParserNOT           = 24
	SpecGrammarParserAND           = 25
	SpecGrammarParserOR            = 26
	SpecGrammarParserIMPLIES       = 27
	SpecGrammarParserEQ            = 28
	SpecGrammarParserNEQ           = 29
	SpecGrammarParserLESS          = 30
	SpecGrammarParserGREAT         = 31
	SpecGrammarParserLEQ           = 32
	SpecGrammarParserGEQ           = 33
	SpecGrammarParserDIV           = 34
	SpecGrammarParserMOD           = 35
	SpecGrammarParserDOT           = 36
	SpecGrammarParserCOLON         = 37
	SpecGrammarParserCOMMA         = 38
	SpecGrammarParserPLUS          = 39
	SpecGrammarParserMINUS         = 40
	SpecGrammarParserSTAR          = 41
	SpecGrammarParserQUESTION      = 42
	SpecGrammarParserREFERENCE     = 43
	SpecGrammarParserWHITESPACE    = 44
	SpecGrammarParserSPECSTART     = 45
	SpecGrammarParserSPECEND       = 46
	SpecGrammarParserSPECLINESTART = 47
)

// SpecGrammarParser rules.
const (
	SpecGrammarParserRULE_start                      = 0
	SpecGrammarParserRULE_specification              = 1
	SpecGrammarParserRULE_specStatement              = 2
	SpecGrammarParserRULE_assertion                  = 3
	SpecGrammarParserRULE_expression                 = 4
	SpecGrammarParserRULE_primary                    = 5
	SpecGrammarParserRULE_unary                      = 6
	SpecGrammarParserRULE_binary                     = 7
	SpecGrammarParserRULE_operand                    = 8
	SpecGrammarParserRULE_literal                    = 9
	SpecGrammarParserRULE_integer                    = 10
	SpecGrammarParserRULE_identifier                 = 11
	SpecGrammarParserRULE_squarebracket              = 12
	SpecGrammarParserRULE_dotnotation                = 13
	SpecGrammarParserRULE_arrayLit                   = 14
	SpecGrammarParserRULE_structLit                  = 15
	SpecGrammarParserRULE_literalValue               = 16
	SpecGrammarParserRULE_elementList                = 17
	SpecGrammarParserRULE_keyedElement               = 18
	SpecGrammarParserRULE_key                        = 19
	SpecGrammarParserRULE_element                    = 20
	SpecGrammarParserRULE_arrayType                  = 21
	SpecGrammarParserRULE_arrayLength                = 22
	SpecGrammarParserRULE_elementType                = 23
	SpecGrammarParserRULE_typeLit                    = 24
	SpecGrammarParserRULE_pointerType                = 25
	SpecGrammarParserRULE_purity                     = 26
	SpecGrammarParserRULE_sharedVarsNotation         = 27
	SpecGrammarParserRULE_exclusiveVarsNotation      = 28
	SpecGrammarParserRULE_old                        = 29
	SpecGrammarParserRULE_label                      = 30
	SpecGrammarParserRULE_variableList               = 31
	SpecGrammarParserRULE_expressionList             = 32
	SpecGrammarParserRULE_identifierList             = 33
	SpecGrammarParserRULE_varTypeTuple               = 34
	SpecGrammarParserRULE_accessPermission           = 35
	SpecGrammarParserRULE_reference                  = 36
	SpecGrammarParserRULE_domain                     = 37
	SpecGrammarParserRULE_domainLiteral              = 38
	SpecGrammarParserRULE_numericDomainLiteral       = 39
	SpecGrammarParserRULE_dataStructureDomainLiteral = 40
	SpecGrammarParserRULE_dataStructureRange         = 41
	SpecGrammarParserRULE_predicate                  = 42
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpecGrammarParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpecGrammarParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Specification() ISpecificationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISpecificationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISpecificationContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserEOF, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpecGrammarListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpecGrammarListener); ok {
		listenerT.ExitStart(s)
	}
}

func (s *StartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SpecGrammarVisitor:
		return t.VisitStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SpecGrammarParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SpecGrammarParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(86)
		p.Specification()
	}
	{
		p.SetState(87)
		p.Match(SpecGrammarParserEOF)
	}

	return localctx
}

// ISpecificationContext is an interface to support dynamic dispatch.
type ISpecificationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSpecificationContext differentiates from other interfaces.
	IsSpecificationContext()
}

type SpecificationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySpecificationContext() *SpecificationContext {
	var p = new(SpecificationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpecGrammarParserRULE_specification
	return p
}

func (*SpecificationContext) IsSpecificationContext() {}

func NewSpecificationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SpecificationContext {
	var p = new(SpecificationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpecGrammarParserRULE_specification

	return p
}

func (s *SpecificationContext) GetParser() antlr.Parser { return s.parser }

func (s *SpecificationContext) AllSpecStatement() []ISpecStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISpecStatementContext)(nil)).Elem())
	var tst = make([]ISpecStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISpecStatementContext)
		}
	}

	return tst
}

func (s *SpecificationContext) SpecStatement(i int) ISpecStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISpecStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISpecStatementContext)
}

func (s *SpecificationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SpecificationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SpecificationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpecGrammarListener); ok {
		listenerT.EnterSpecification(s)
	}
}

func (s *SpecificationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpecGrammarListener); ok {
		listenerT.ExitSpecification(s)
	}
}

func (s *SpecificationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SpecGrammarVisitor:
		return t.VisitSpecification(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SpecGrammarParser) Specification() (localctx ISpecificationContext) {
	localctx = NewSpecificationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SpecGrammarParserRULE_specification)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(89)
		p.SpecStatement()
	}
	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SpecGrammarParserASSERT)|(1<<SpecGrammarParserASSUME)|(1<<SpecGrammarParserPRE)|(1<<SpecGrammarParserPOST)|(1<<SpecGrammarParserINV)|(1<<SpecGrammarParserPURE)|(1<<SpecGrammarParserSHARED)|(1<<SpecGrammarParserEXCLUSIVE)|(1<<SpecGrammarParserPREDICATE)|(1<<SpecGrammarParserIDENTIFIER)|(1<<SpecGrammarParserLPAREN))) != 0 {
		{
			p.SetState(90)
			p.SpecStatement()
		}

		p.SetState(95)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISpecStatementContext is an interface to support dynamic dispatch.
type ISpecStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetKind returns the kind token.
	GetKind() antlr.Token

	// SetKind sets the kind token.
	SetKind(antlr.Token)

	// IsSpecStatementContext differentiates from other interfaces.
	IsSpecStatementContext()
}

type SpecStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	kind   antlr.Token
}

func NewEmptySpecStatementContext() *SpecStatementContext {
	var p = new(SpecStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpecGrammarParserRULE_specStatement
	return p
}

func (*SpecStatementContext) IsSpecStatementContext() {}

func NewSpecStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SpecStatementContext {
	var p = new(SpecStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpecGrammarParserRULE_specStatement

	return p
}

func (s *SpecStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *SpecStatementContext) GetKind() antlr.Token { return s.kind }

func (s *SpecStatementContext) SetKind(v antlr.Token) { s.kind = v }

func (s *SpecStatementContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserLPAREN, 0)
}

func (s *SpecStatementContext) SpecStatement() ISpecStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISpecStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISpecStatementContext)
}

func (s *SpecStatementContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserRPAREN, 0)
}

func (s *SpecStatementContext) Assertion() IAssertionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssertionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssertionContext)
}

func (s *SpecStatementContext) ASSERT() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserASSERT, 0)
}

func (s *SpecStatementContext) ASSUME() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserASSUME, 0)
}

func (s *SpecStatementContext) PRE() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserPRE, 0)
}

func (s *SpecStatementContext) POST() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserPOST, 0)
}

func (s *SpecStatementContext) INV() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserINV, 0)
}

func (s *SpecStatementContext) Purity() IPurityContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPurityContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPurityContext)
}

func (s *SpecStatementContext) Label() ILabelContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILabelContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *SpecStatementContext) SharedVarsNotation() ISharedVarsNotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISharedVarsNotationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISharedVarsNotationContext)
}

func (s *SpecStatementContext) ExclusiveVarsNotation() IExclusiveVarsNotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExclusiveVarsNotationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExclusiveVarsNotationContext)
}

func (s *SpecStatementContext) Predicate() IPredicateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPredicateContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPredicateContext)
}

func (s *SpecStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SpecStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SpecStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpecGrammarListener); ok {
		listenerT.EnterSpecStatement(s)
	}
}

func (s *SpecStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpecGrammarListener); ok {
		listenerT.ExitSpecStatement(s)
	}
}

func (s *SpecStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SpecGrammarVisitor:
		return t.VisitSpecStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SpecGrammarParser) SpecStatement() (localctx ISpecStatementContext) {
	localctx = NewSpecStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SpecGrammarParserRULE_specStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(115)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SpecGrammarParserLPAREN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(96)
			p.Match(SpecGrammarParserLPAREN)
		}
		{
			p.SetState(97)
			p.SpecStatement()
		}
		{
			p.SetState(98)
			p.Match(SpecGrammarParserRPAREN)
		}

	case SpecGrammarParserASSERT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(100)

			var _m = p.Match(SpecGrammarParserASSERT)

			localctx.(*SpecStatementContext).kind = _m
		}
		{
			p.SetState(101)
			p.assertion(0)
		}

	case SpecGrammarParserASSUME:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(102)

			var _m = p.Match(SpecGrammarParserASSUME)

			localctx.(*SpecStatementContext).kind = _m
		}
		{
			p.SetState(103)
			p.assertion(0)
		}

	case SpecGrammarParserPRE:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(104)

			var _m = p.Match(SpecGrammarParserPRE)

			localctx.(*SpecStatementContext).kind = _m
		}
		{
			p.SetState(105)
			p.assertion(0)
		}

	case SpecGrammarParserPOST:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(106)

			var _m = p.Match(SpecGrammarParserPOST)

			localctx.(*SpecStatementContext).kind = _m
		}
		{
			p.SetState(107)
			p.assertion(0)
		}

	case SpecGrammarParserINV:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(108)

			var _m = p.Match(SpecGrammarParserINV)

			localctx.(*SpecStatementContext).kind = _m
		}
		{
			p.SetState(109)
			p.assertion(0)
		}

	case SpecGrammarParserPURE:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(110)
			p.Purity()
		}

	case SpecGrammarParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(111)
			p.Label()
		}

	case SpecGrammarParserSHARED:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(112)
			p.SharedVarsNotation()
		}

	case SpecGrammarParserEXCLUSIVE:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(113)
			p.ExclusiveVarsNotation()
		}

	case SpecGrammarParserPREDICATE:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(114)
			p.Predicate()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAssertionContext is an interface to support dynamic dispatch.
type IAssertionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetKind returns the kind token.
	GetKind() antlr.Token

	// SetKind sets the kind token.
	SetKind(antlr.Token)

	// IsAssertionContext differentiates from other interfaces.
	IsAssertionContext()
}

type AssertionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	kind   antlr.Token
}

func NewEmptyAssertionContext() *AssertionContext {
	var p = new(AssertionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpecGrammarParserRULE_assertion
	return p
}

func (*AssertionContext) IsAssertionContext() {}

func NewAssertionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssertionContext {
	var p = new(AssertionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpecGrammarParserRULE_assertion

	return p
}

func (s *AssertionContext) GetParser() antlr.Parser { return s.parser }

func (s *AssertionContext) GetKind() antlr.Token { return s.kind }

func (s *AssertionContext) SetKind(v antlr.Token) { s.kind = v }

func (s *AssertionContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserLPAREN, 0)
}

func (s *AssertionContext) AllAssertion() []IAssertionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAssertionContext)(nil)).Elem())
	var tst = make([]IAssertionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAssertionContext)
		}
	}

	return tst
}

func (s *AssertionContext) Assertion(i int) IAssertionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssertionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAssertionContext)
}

func (s *AssertionContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserRPAREN, 0)
}

func (s *AssertionContext) FORALL() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserFORALL, 0)
}

func (s *AssertionContext) VariableList() IVariableListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableListContext)
}

func (s *AssertionContext) AllCOLON() []antlr.TerminalNode {
	return s.GetTokens(SpecGrammarParserCOLON)
}

func (s *AssertionContext) COLON(i int) antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserCOLON, i)
}

func (s *AssertionContext) Domain() IDomainContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDomainContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDomainContext)
}

func (s *AssertionContext) IMPLIES() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserIMPLIES, 0)
}

func (s *AssertionContext) EXISTS() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserEXISTS, 0)
}

func (s *AssertionContext) AND() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserAND, 0)
}

func (s *AssertionContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *AssertionContext) NOT() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserNOT, 0)
}

func (s *AssertionContext) QUESTION() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserQUESTION, 0)
}

func (s *AssertionContext) OR() antlr.TerminalNode {
	return s.GetToken(SpecGrammarParserOR, 0)
}

func (s *AssertionContext) GetRuleContext() antlr.RuleContext {
	return s
}
